@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.1</version>
+            <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -33,7 +33,6 @@
                 <includes>
                     <include>**/*.nnue</include>
                 </includes>
-                <filtering>true</filtering>
             </resource>
         </resources>
         <plugins>
@@ -58,7 +57,6 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <addClasspath>true</addClasspath>
                             <mainClass>com.kelseyde.calvin.Application</mainClass>
                         </manifest>
                     </archive>
@@ -69,17 +67,14 @@
                 <version>3.3.1</version>
                 <configuration>
                     <nonFilteredFileExtensions>
-                        <nonFilteredFileExtension>p12</nonFilteredFileExtension>
-                        <nonFilteredFileExtension>jks</nonFilteredFileExtension>
                         <nonFilteredFileExtension>nnue</nonFilteredFileExtension>
-                        <nonFilteredFileExtension>bin</nonFilteredFileExtension>
                     </nonFilteredFileExtensions>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-toolchains-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -105,16 +100,6 @@
                         <include>**/*Test.java</include>
                     </includes>
                     <argLine>--add-modules jdk.incubator.vector</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.3.1</version>
-                <configuration>
-                    <argLine>
-                        --add-modules jdk.incubator.vector
-                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
